--- a/src/app/services/create-service/create-service.component.html
+++ b/src/app/services/create-service/create-service.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Create New Service</h2>
-<mat-dialog-content [formGroup]="createServiceForm">
-  <form>
+<mat-dialog-content>
+  <form  [formGroup]="createServiceForm">
     <div class="dialog-container">
       <!-- Left Column -->
       <div class="left-column">
