--- a/src/app/services/edit-service/edit-service.component.html
+++ b/src/app/services/edit-service/edit-service.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Create New Service</h2>
-<mat-dialog-content [formGroup]="editServiceForm">
-  <form>
+<mat-dialog-content>
+  <form [formGroup]="editServiceForm">
     <div class="dialog-container">
       <!-- Left Column -->
       <div class="left-column">
