--- a/src/app/profile/edit-service-provider-photos/edit-service-provider-photos.component.css
+++ b/src/app/profile/edit-service-provider-photos/edit-service-provider-photos.component.css
@@ -8,13 +8,7 @@
   column-gap: 10rem;
 }
 
-.left-column,
-.right-column {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+
 
 .checkbox-container {
   display: flex;
@@ -36,18 +30,12 @@
 }
 
 .primary-button {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: white;
 }
 
 .cancel-button {
   background-color: var(--primary-color);
-}
-
-.form-column {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5em;
 }
 
 .images-preview {
@@ -56,19 +44,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
-  gap: 10px;
+  gap: 15px;
 }
-
 .images-preview img {
-  max-width: 150px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
   border-radius: 8px;
-  border: 1px solid var(--secondary-color);
 }
 
 .single-image-preview {
-  display: inline-block;
-  margin-right: 10px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center the image in the preview container */
+  width: 150px;
+  height: 150px; /* Match the image dimensions */
 }
 
 .image-close-btn:hover {
@@ -92,3 +83,4 @@
   justify-content: center;
   padding: 0;
 }
+
