--- a/src/app/authentication/register/email-verified/email-verified.component.html
+++ b/src/app/authentication/register/email-verified/email-verified.component.html
@@ -7,11 +7,11 @@
 
 
   <p *ngIf="state===VerificationTokenState.ACCEPTED && !this.isLoading">Your account has been verified. You can now log in and start using your account.</p>
-  <p *ngIf="state===VerificationTokenState.EXPIRED && !this.isLoading">Your verification expired, you may request a new email to be sent.</p>
-  <p *ngIf="state===VerificationTokenState.MISSING && !this.isLoading">We couldn't find your account, your account may have been suspended.</p>
+  <p *ngIf="state===VerificationTokenState.EXPIRED && !this.isLoading">Your verification expired, please re-register.</p>
+  <p *ngIf="state===VerificationTokenState.MISSING && !this.isLoading">We couldn't find your account, your account may have been suspended or already verified.</p>
 
   <button mat-raised-button *ngIf="state===VerificationTokenState.ACCEPTED && !this.isLoading" class="loginBtn" [routerLink]="'/login'">LOGIN</button>
-  <button mat-raised-button *ngIf="state===VerificationTokenState.EXPIRED && !this.isLoading" class="loginBtn" id="resendEmailBtn" (click)="resendEmail()">RESEND EMAIL</button>
+  <button mat-raised-button *ngIf="state===VerificationTokenState.EXPIRED && !this.isLoading" class="loginBtn" [routerLink]="'/register'" >REGISTER</button>
   <p *ngIf="newEmailSent && newEmailRequested">Email sent. Please check your inbox.</p>
   <p *ngIf="!newEmailSent && newEmailRequested">Error with resending email.</p>
 </div>
